<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity"
    android:weightSum="4">


    <Button
        android:id="@+id/btn_add_team"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/add_team"
        android:layout_weight="1"
        android:background="@color/addTeam"/>

    <Button
        android:id="@+id/btn_add_score"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/add_score"
        android:layout_weight="1"
        android:background="@color/addScore"/>

    <Button
        android:id="@+id/btn_statistics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/show_statistics"
        android:layout_weight="1"
        android:background="@color/showStatistics"/>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/reset_statistics"
        android:layout_weight="1"
        android:background="@color/reset"/>

</LinearLayout>