<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_title"
        android:layout_marginBottom="20dp"
        android:text="@string/team_name"/>

    <EditText
        android:id="@+id/et_teamname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_team_name"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@color/save"/>

</LinearLayout>